Bug 1634949: Avoid list-initializer construction in WebGL IpdlQueueBuffer r=jgilbert

The list-initialization previously used is illegal for this case in C++20.

Differential Revision: https://phabricator.services.mozilla.com/D73766